--- a/app/components/NavBar.css
+++ b/app/components/NavBar.css
@@ -1,9 +1,13 @@
 .svg {
- display: inline-block;
+  display: inline-block;
   transition: transform 0.3s ease;
-    will-change: transform;
+  will-change: transform;
 }
-.svg:hover {
-   transform:  translate3d(-5px,-5px,-5px) rotate(-10deg) scale3d(1.5, 1.5, 1.1);
+.Msvg{
+   display: inline-block;
+   will-change: transform;
+}
 
+.svg:hover {
+  transform: translate3d(-5px, -5px, -5px) rotate(-10deg) scale3d(1.5, 1.5, 1.1);
 }
